TOSORT/CKA7b_scenario_solutions/31.ingress/REWRITE_NOT_WORKING/ingress_path_quiz_vote.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host-ingress1
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: web.com
    http:
      paths:
      - path: /quiz
        pathType: Prefix
        backend:
          service: 
            name: quiz
            port: 
              number: 80
      - path: /vote
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
